--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -40,9 +40,9 @@
                 Progress
               </span>
               <div class="progress progress-striped">
-                <div class="progress-bar" style="width:1%">
-                  <span class="sr-only">1% Complete</span>
-                  1%
+                <div class="progress-bar" style="width:12%">
+                  <span class="sr-only">12% Complete</span>
+                  12%
                 </div>
               </div>
             </center>
@@ -67,9 +67,9 @@
               <li class="resolution">
                 Go Skiing 25 Days
                 <div class="progress progress-striped">
-                  <div class="progress-bar" style="width:4%">
-                    <span class="sr-only">1 Trip</span>
-                    1
+                  <div class="progress-bar" style="width:20%">
+                    <span class="sr-only">5 Trips</span>
+                    5 Trips
                   </div>
                 </div>
               </li>
@@ -91,7 +91,7 @@
                   </div>
                 </div>
               </li>
-              <li class="resolution">Hammock Camp in a Snow Storm</li>
+              <li class="resolution done">Hammock Camp in a Snow Storm</li>
               <li class="resolution">Design and Manufacture a Printed Circuit Board</li>
               <li class="resolution">Design an App That Uses WebGL</li>
               <li class="resolution">Finish Godel Escher Bach</li>
