Added new resolutions format.

--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Author: Kyle Hovey -->
     <title>2018 | Resolutions</title>
-
-    <!-- FAVICON -->
-    <link rel="shortcut icon" href="../images/favicon/favicon.ico" type='image/x-icon' />
-
-    <!-- Stay Mobile Friendly -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Know Charset -->
     <meta charset=utf-8>
-
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Acme|Averia+Serif+Libre|IM+Fell+English+SC" rel="stylesheet">
-
-    <!-- ===== CSS INCLUDES ===== -->
-    <!-- JQuery --> <link rel="stylesheet" type="text/css" href="style/main.css" />
-
-    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="style/main.css" />
     <link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
-    <!-- ===== /CSS INCLUDES ===== -->
   </head>
   <body>
     <header>
@@ -31,76 +16,9 @@
         </h1>
       </center>
     </header>
-    <section id="resolution-progress">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 card-container" id="about-col">
-            <center>
-              <span class="title-text">
-                Progress
-              </span>
-              <div class="progress progress-striped">
-                <div class="progress-bar" style="width:12%">
-                  <span class="sr-only">12% Complete</span>
-                  12%
-                </div>
-              </div>
-            </center>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="resolutions">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 card-container" id="resolutions-col">
-            <ul id="resolutions-list">
-              <li class="resolution">
-                Top-Out on 50 Climbs
-                <div class="progress progress-striped">
-                  <div class="progress-bar" style="width:0%">
-                    <span class="sr-only">0 Climbs</span>
-                    0
-                  </div>
-                </div>
-              </li>
-              <li class="resolution">
-                Go Skiing 25 Days
-                <div class="progress progress-striped">
-                  <div class="progress-bar" style="width:20%">
-                    <span class="sr-only">5 Trips</span>
-                    5 Trips
-                  </div>
-                </div>
-              </li>
-              <li class="resolution">
-                Find 250 Geocaches
-                <div class="progress progress-striped">
-                  <div class="progress-bar" style="width:6%">
-                    <span class="sr-only">16 Found</span>
-                    16
-                  </div>
-                </div>
-              </li>
-              <li class="resolution">
-                Read 3 Fiction Novels
-                <div class="progress progress-striped">
-                  <div class="progress-bar" style="width:0%">
-                    <span class="sr-only">0 Read</span>
-                    0
-                  </div>
-                </div>
-              </li>
-              <li class="resolution done">Hammock Camp in a Snow Storm</li>
-              <li class="resolution">Design and Manufacture a Printed Circuit Board</li>
-              <li class="resolution">Design an App That Uses WebGL</li>
-              <li class="resolution">Finish Godel Escher Bach</li>
-              <li class="resolution">Run the Mile in Under 7 Minutes</li>
-              <li class="resolution">Write and Record One Song</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="./js/app/index/bundle.js"></script>
   </body>
 </html>
