--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>2019 | Resolutions</title>
+    <title>2020 | Resolutions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset=utf-8>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Acme|Averia+Serif+Libre|IM+Fell+English+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Acme|Averia+Serif+Libre|IM+Fell+English+SC|Bad+Script|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/main.css" />
     <link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
   </head>
@@ -12,7 +12,7 @@
     <header>
       <center>
         <h1>
-          <span id="title">Resolutions for 2019</span>
+          <span id="title">Resolutions for 2020</span>
         </h1>
       </center>
     </header>
