Added link to blog to home page

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             Download Resume
           </a>
           <span class="divider">|</span>
+          <a href="blog">
+            Blog
+          </a>
+          <span class="divider">|</span>
           <a href="Resolutions/index.html">
             Resolutions
           </a>
