--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>2020 | Resolutions</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset=utf-8>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Acme|Averia+Serif+Libre|IM+Fell+English+SC|Bad+Script|Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style/main.css" />
-    <link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
-  </head>
-  <body>
-    <header>
-      <center>
-        <h1>
-          <span id="title">Resolutions for 2020</span>
-        </h1>
-      </center>
-    </header>
-    <script type="text/javascript" src="./js/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/sweetalert.min.js"></script>
-    <script type="text/javascript" src="./js/app/index/bundle.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.daf34b9a.js"></script><link href="/static/css/main.31b66038.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
