Added meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Kyle Hovey's Project Portfolio" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
