Fixed 8 bit link

--- a/spel3o/index.html
+++ b/spel3o/index.html
@@ -44,7 +44,7 @@
 			<p></p>
 			<p></p>
 			<p></p>
-			<center><p class=text>Welcome to my site! Here you can find my info about all of my recent projects, as well as my contact info.<br>If you were looking for my 8-bit computer project please go to <a href="http://www.8bitspaghetti.com">www.8bitspaghetti.com</a></p></center>
+			<center><p class=text>Welcome to my site! Here you can find my info about all of my recent projects, as well as my contact info.<br>If you were looking for my 8-bit computer project please go to <a href="http://www.8-bitspaghetti.com">www.8-bitspaghetti.com</a></p></center>
 			<p></p>
 			<p></p>
 		</center>
