--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       sizes="16x16"
       href="/images/favicon/favicon-16x16.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#3b3b3b" />
     <title>Kyle Hovey</title>
     
