--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       sizes="16x16"
       href="/images/favicon/favicon-16x16.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3b3b3b" />
     <title>Kyle Hovey</title>
     
-    <script type="module" crossorigin src="/assets/index.3129a7d2.js"></script>
+    <script type="module" crossorigin src="/assets/index.d0c38c9d.js"></script>
     <link rel="stylesheet" href="/assets/index.7dd6764c.css">
   </head>
   <body>
